--- a/notebooks/spark_notebook.ipynb
+++ b/notebooks/spark_notebook.ipynb
@@ -2,27 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import pandas as pd\n",
-    "from pyspark.sql.functions import round as spark_round, desc\n",
-    "\n",
-    "sys.path.append('..')\n",
-    "from etl import create_spark_session\n",
-    "\n",
-    "from schemas import song_data_schema, log_data_schema, user_table_schema, \\\n",
-    "    song_table_schema, artist_table_schema, songplay_table_schema, \\\n",
-    "    time_table_schema, user_table_schema_with_start_time\n",
-    "\n",
-    "from basic_pipeline import create_basic_pipeline"
+    "import configparser\n",
+    "from pyspark.conf import SparkConf\n",
+    "from pyspark.sql import SparkSession"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparkConf = SparkConf()\n",
+    "parser = configparser.ConfigParser()\n",
+    "parser.optionxform=str\n",
+    "parser.read_file(open('../sparkconf.cfg'))\n",
+    "\n",
+    "sparkConf.setMaster('k8s://127.0.0.1:16443')\n",
+    "sparkConf.setAppName('Local spark session')\n",
+    "\n",
+    "for section, config in parser.items():\n",
+    "    for key, value in config.items():\n",
+    "        sparkConf.set(key, value)\n",
+    "\n",
+    "spark = SparkSession.builder.config(conf=sparkConf).getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +55,7 @@
        "              <dt>Master</dt>\n",
        "                <dd><code>k8s://127.0.0.1:16443</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>Udacity - Data Lake Project</code></dd>\n",
+       "                <dd><code>Local spark session</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -51,192 +63,34 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f38acd88130>"
+       "<pyspark.sql.session.SparkSession at 0x7fc29c0d29a0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spark = create_spark_session(local=True)\n",
-    "spark.sparkContext.setLogLevel(\"ERROR\")\n",
     "spark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_log_data = spark.read.format('json').schema(log_data_schema).option(\"recursiveFileLookup\",True).load('s3a://udacity-dend/log_data')\n",
-    "df_song_data = spark.read.format('json').schema(song_data_schema).option(\"recursiveFileLookup\",True).load('s3a://udacity-dend/song_data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dict - get column name from expression\n",
-    "rename_transformations = {\n",
-    "    'start_time': 'ts',\n",
-    "    'user_id': 'userId',\n",
-    "    'first_name': 'firstName',\n",
-    "    'last_name': 'lastName',\n",
-    "    'name': 'artist_name',\n",
-    "    'location': 'artist_location',\n",
-    "    'latitude': 'artist_latitude',\n",
-    "    'longitude': 'artist_longitude',\n",
-    "    'session_id': 'sessionId',\n",
-    "    'user_agent': 'userAgent' \n",
-    "}\n",
-    "\n",
-    "cast_transformations = {\n",
-    "    'start_time': 'to_timestamp(start_time / 1000) as start_time', \n",
-    "    'user_id': 'INT(user_id) as user_id',\n",
-    "}\n",
-    "\n",
-    "time_transformations = {\n",
-    "  \"hour\": \"hour(start_time) as hour\",\n",
-    "  \"day\": \"dayofmonth(start_time) as day\",\n",
-    "  \"week\": \"weekofyear(start_time) as week\",\n",
-    "  \"month\": \"month(start_time) as month\",\n",
-    "  \"year\": \"year(start_time) as year\",\n",
-    "  \"weekday\": \"dayofweek(start_time) as weekday\",\n",
-    "}\n",
-    "\n",
-    "basic_pipeline = create_basic_pipeline(rename_transformations=rename_transformations, cast_transformations=cast_transformations)\n",
-    "time_basic_pipeline = create_basic_pipeline(cast_transformations=time_transformations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "21/12/31 13:40:25 WARN ExecutorPodsWatchSnapshotSource: Kubernetes client has been closed.\n"
      ]
     }
    ],
    "source": [
-    "# spark.conf.set(\"spark.sql.sources.partitionOverwriteMode\",\"dynamic\")\n",
-    "# some users are repeated but with a new level\n",
-    "uniqueRowFields = list(filter(lambda name: name not in ['start_time', 'level'], user_table_schema.names)) \n",
-    "df_users = basic_pipeline((df_log_data, user_table_schema_with_start_time)) \\\n",
-    "    .where('user_id IS NOT NULL') \\\n",
-    "    .orderBy(desc('start_time')).dropDuplicates(uniqueRowFields).drop('start_time')\n",
-    "\n",
-    "df_users.write \\\n",
-    "    .option('schema', user_table_schema) \\\n",
-    "    .format('parquet') \\\n",
-    "    .partitionBy('user_id') \\\n",
-    "    .mode('overwrite') \\\n",
-    "    .save('s3a://dutrajardim/udacity-dl-project/users.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_songs = basic_pipeline((df_song_data, song_table_schema))\n",
-    "df_songs.write \\\n",
-    "    .partitionBy(['year', 'artist_id']) \\\n",
-    "    .option('schema', song_table_schema) \\\n",
-    "    .format('parquet') \\\n",
-    "    .mode('overwrite') \\\n",
-    "    .save('s3a://dutrajardim/udacity-dl-project/songs.parquet')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
-   "source": [
-    "df_artists = basic_pipeline((df_song_data, artist_table_schema)).distinct()\n",
-    "\n",
-    "df_artists.write \\\n",
-    "    .partitionBy(['artist_id']) \\\n",
-    "    .option('schema', artist_table_schema) \\\n",
-    "    .format('parquet') \\\n",
-    "    .mode('overwrite') \\\n",
-    "    .save('s3a://dutrajardim/udacity-dl-project/artists.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import expr\n",
-    "\n",
-    "df_joined = df_log_data.alias('log_data') \\\n",
-    "    .join(\n",
-    "        df_songs.select(['song_id', 'artist_id', 'title', 'duration']).alias('songs'), \n",
-    "        on=expr(\"log_data.song = songs.title AND ROUND(log_data.length, 4) = ROUND(songs.duration, 4)\"),\n",
-    "        how='LEFT'\n",
-    "    )\n",
-    "\n",
-    "df_songplays = basic_pipeline((df_joined, songplay_table_schema))\n",
-    "df_songplays \\\n",
-    "    .withColumn('year', expr(\"year(start_time)\")) \\\n",
-    "    .withColumn('month', expr(\"month(start_time)\")) \\\n",
-    "    .write \\\n",
-    "    .partitionBy(['year', 'month']) \\\n",
-    "    .option('schema', songplay_table_schema) \\\n",
-    "    .mode('overwrite') \\\n",
-    "    .save('s3a://dutrajardim/udacity-dl-project/songplays.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_songplays = basic_pipeline((df_joined, songplay_table_schema))\n",
-    "\n",
-    "df_times = time_basic_pipeline((df_songplays, time_table_schema)).distinct()\n",
-    "df_times.write \\\n",
-    "    .partitionBy(['year', 'month']) \\\n",
-    "    .option('schema', time_table_schema) \\\n",
-    "    .mode('overwrite') \\\n",
-    "    .save('s3a://dutrajardim/udacity-dl-project/times.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "spark.stop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
