create the possibilite to run spark on k8s from the script

--- a/notebooks/spark_notebook.ipynb
+++ b/notebooks/spark_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,6 @@
     "parser = configparser.ConfigParser()\n",
     "parser.optionxform=str\n",
     "parser.read_file(open('../sparkconf.cfg'))\n",
-    "\n",
-    "sparkConf.setMaster('k8s://127.0.0.1:16443')\n",
-    "sparkConf.setAppName('Local spark session')\n",
     "\n",
     "for section, config in parser.items():\n",
     "    for key, value in config.items():\n",
@@ -34,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,10 +60,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fc29c0d29a0>"
+       "<pyspark.sql.session.SparkSession at 0x7eff4c3949a0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "21/12/31 13:40:25 WARN ExecutorPodsWatchSnapshotSource: Kubernetes client has been closed.\n"
+      "22/01/05 16:59:45 WARN ExecutorPodsWatchSnapshotSource: Kubernetes client has been closed.\n"
      ]
     }
    ],
